# PaperQA

./: .gitignore  ARCHITECTURE_SIMPLIFIED.md  CMakeLists.txt  RAG_INTEGRATION_PLAN.md  README_ENHANCED.md  test.txt  test_enhanced_system.py
include/: pdf_parser.h  text_processor.h  vector_db.h
python/: glm_interface.py  langchain_processor.py  pdf_parser.py  requirements.txt  simple_langchain_processor.py
src/: main.cpp  pdf_parser.copy.cpp  pdf_parser.cpp  text_processor.cpp
